# falcon-server

./: .gitignore  CMakeLists.txt  readme.txt  test.yaml
arduino/send_TTL_ino/send_TTL_ino/: send_TTL_ino.ino
cmake/: BuildExternalProject.cmake  FindYamlCpp.cmake
doc/: code_style_conventions.txt
doc/dio_card/: dio_card_libraries_installation_from_deb_packages.txt  dio_card_libraries_installation_from_source.txt
doc/graph_manager_debug/: most_frequent_errors.txt
doc/neuralynx/: digilynx_record.txt  ip_address_settings.txt  neuralynx_hardware_configuration.txt
doc/states/: info about states.txt
ext/: CMakeLists.txt
ext/advantech/: bdaqctrl.h
ext/cnpy/: cnpy.h
ext/disruptor/: CMakeLists.txt  batch_descriptor.h  claim_strategy.cpp  claim_strategy.h  interface.h  sequence.cpp  sequence.h  sequence_barrier.h  wait_strategy.cpp  wait_strategy.h
ext/g3log/src/: g2loglevels.cpp  g2loglevels.hpp
lib/: CMakeLists.txt
lib/arduino-serial/: CMakeLists.txt
lib/dio/: CMakeLists.txt  advantechdio.cpp  advantechdio.hpp  dio.cpp  dio.hpp  dummydio.cpp  dummydio.hpp
lib/dsp/: CMakeLists.txt  algorithms.cpp  algorithms.hpp  algorithms.ipp  behavior_algorithms.cpp  behavior_algorithms.hpp  filter.cpp  filter.hpp
lib/encoding/: CMakeLists.txt  encodingmodel.cpp  encodingmodel.hpp
lib/environment/: CMakeLists.txt  environment.cpp  environment.hpp
lib/factory/: factory.hpp
lib/gmm/: CMakeLists.txt  component.cpp  component.h  covariance.cpp  covariance.h  mixture.cpp  mixture.h
lib/loggers/: CMakeLists.txt  customsink.cpp  customsink.hpp
lib/neuralynx/: nlx.cpp  nlx.hpp
lib/openephys/: CMakeLists.txt  openephys.hpp
lib/utilities/: CMakeLists.txt  configuration.cpp  configuration.hpp  configuration.ipp  general.cpp  general.hpp  general.ipp  iterators.hpp  keyboard.cpp  keyboard.hpp  math_numeric.cpp  math_numeric.hpp  math_numeric.ipp  string.cpp  string.hpp  string.ipp  time.cpp  time.hpp  time.ipp  zmqutil.cpp  zmqutil.hpp
lib/vector_operations/: vector_io.hpp  vector_io.ipp
python/falcon/io/: __init__.py  deserialization.py
src/: CMakeLists.txt  context.hpp  main.cpp  ringbuffer.hpp
src/commands/: CMakeLists.txt  commandhandler.cpp  commandhandler.hpp  commandsource.cpp  commandsource.hpp
src/configuration/: configuration.cpp  configuration.hpp
src/data/: behaviordata.cpp  behaviordata.hpp  eventdata.cpp  eventdata.hpp  idata.cpp  idata.hpp  likelihooddata.cpp  likelihooddata.hpp  muadata.cpp  muadata.hpp  multichanneldata.hpp  scalardata.hpp  serialize.cpp  serialize.hpp  spikedata.cpp  spikedata.hpp  vectordata.hpp  videotrackdata.cpp  videotrackdata.hpp
src/graph/: CMakeLists.txt  connectionparser.cpp  connectionparser.hpp  connections.cpp  connections.hpp  graphexceptions.hpp  graphmanager.cpp  graphmanager.hpp  iprocessor.cpp  iprocessor.hpp  istreamports.cpp  istreamports.hpp  portpolicy.hpp  processorengine.cpp  processorengine.hpp  processorgraph.cpp  processorgraph.hpp  runinfo.hpp  sharedstate.hpp  streamports.cpp  streamports.hpp  streamports.ipp  threadutilities.cpp  threadutilities.hpp
src/processors/: CMakeLists.txt  behaviorestimator.cpp  behaviorestimator.hpp  behaviorreader.cpp  behaviorreader.hpp  burstdetector.cpp  burstdetector.hpp  decoder.cpp  decoder.hpp  digitaloutput.cpp  digitaloutput.hpp  dispatcher.cpp  dispatcher.hpp  dummysink.cpp  dummysink.hpp  eventconverter.cpp  eventconverter.hpp  eventfilter.cpp  eventfilter.hpp  eventsink.cpp  eventsink.hpp  eventsource.cpp  eventsource.hpp  eventsync.cpp  eventsync.hpp  fileserializer.cpp  fileserializer.hpp  levelcrossingdetector.cpp  levelcrossingdetector.hpp  likelihooddatafilestreamer.cpp  likelihooddatafilestreamer.hpp  likelihoodsync.cpp  likelihoodsync.hpp  muaestimator.cpp  muaestimator.hpp  multichanneldatafilestreamer.cpp  multichanneldatafilestreamer.hpp  multichannelfilter.cpp  multichannelfilter.hpp  nlxparser.cpp  (+32 more)
tests/: CMakeLists.txt  test_filter.cpp
tests/graphs/: open_loop_delay_stim.yaml  open_loop_stim.yaml  test_serial_delay_stim.yaml  test_serial_transmission.yaml
tests/graphs/burst_detection/: spikestreamer_mua_estimator.yaml  spikestreamer_muaestimator_burstdetector.yaml
tests/graphs/example_graphs/: behaviorsource_decodingerrorgenerator.yaml  behaviorsource_network.yaml  behaviorsource_serialization.yaml  behaviorsources_decodingerrorgenerator_network.yaml  digitaloutput.yaml  eventfilter.yaml  events.yaml  file_serialization.yaml  file_serialization_mcd.yaml  levelcrossing.yaml  likelihoodstreamer_serialization.yaml  multi.yaml  multi_connect_out_slot.yaml  multichannelsource_serialization.yaml  nlx.yaml  nlx_filter.yaml  nlx_pure_reader.yaml  nlx_reader_dispatcher.yaml  nlx_reader_parser_dispatcher.yaml  nlx_simple.yaml  nlx_simplefilter.yaml  nlx_stress.yaml  nlx_test.yaml  openephys.yaml  rebuffer.yaml  ripple_detection.yaml  running_stats.yaml  spikestreamer_serialization.yaml  sync_events.yaml  videotrackdatafilestreamer_serializer.yaml  videotrackreader_serializer.yaml  zmq_serialization.yaml
tests/graphs/intrinsic_latency/: 1tt_1serial.yaml  1tt_8serial.yaml  32tt_1serial.yaml  32tt_8serial.yaml  8tt_1serial.yaml  8tt_4serial.yaml
tests/graphs/intrinsic_latency_test_graphs/: 16tt_1serial.yaml  16tt_4serial.yaml  16tt_8serial.yaml  1tt_1serial.yaml  1tt_4serial.yaml  1tt_8serial.yaml  32tt_1serial.yaml  32tt_4serial.yaml  32tt_8serial.yaml  8tt_8serial.yaml
tests/graphs/mua_detection_graphs/: burstdetection_pipeline.yaml
tests/graphs/neural_decoding/: likelihoodstreamer_likelihoodsync_serialization.yaml  spikestreamer_decoder_likelihoodsync_serializer.yaml  spikestreamer_decoder_serializer.yaml
tests/graphs/ripple_detection/: artifact_removal.yaml  artifact_removal_arduino_delaystim.yaml  artifact_removal_no_downsampling.yaml  (+5 more)
tools/: CMakeLists.txt
tools/nlxtestbench/: CMakeLists.txt  common.hpp  config.cpp  config.hpp  datasource.hpp  datastreamer.cpp  datastreamer.hpp  filesource.cpp  filesource.hpp  main.cpp  sinesource.cpp  sinesource.hpp  squaresource.cpp  squaresource.hpp  whitenoisesource.cpp  whitenoisesource.hpp
(+90 files in other folders)
