add_subdirectory( dsp )
add_subdirectory( loggers )
add_subdirectory( utilities )
add_subdirectory( neuralynx )
add_subdirectory( dio )
add_subdirectory( npyreader )
add_subdirectory( gmm )
add_subdirectory( environment )
add_subdirectory( encoding )
add_subdirectory( arduino-serial )
add_subdirectory( openephys )
